--- a/1_Bellman/Bellman.ipynb
+++ b/1_Bellman/Bellman.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 贝尔曼公式"
+    "# 贝尔曼公式\n",
+    "只是单纯的计算当前的状态值或行动值"
    ],
    "metadata": {
     "collapsed": false
@@ -146,7 +147,8 @@
    "cell_type": "markdown",
    "source": [
     "# 贝尔曼最优公式\n",
-    "贝尔曼最优公式是一个理论基础，它需要与特定的算法结合，才能实际应用于解决问题。"
+    "贝尔曼最优公式是一个理论基础，它需要与特定的算法结合，才能实际应用于解决问题。\n",
+    "以下代码采用值迭代的方式（value lteration）"
    ],
    "metadata": {
     "collapsed": false
