--- a/4_SGD/SGD.ipynb
+++ b/4_SGD/SGD.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 随机梯度下降算法SGD"
+    "# 随机梯度下降算法SGD\n",
+    "## 1.SGD"
    ],
    "metadata": {
     "collapsed": false
@@ -14,7 +15,6 @@
    "execution_count": 33,
    "outputs": [],
    "source": [
-    "# 样本生成\n",
     "import numpy as np\n",
     "\n",
     "# 设置目标函数J(w, X)\n",
@@ -72,6 +72,66 @@
    ],
    "source": [
     "w = SGD(3, 1000)\n",
+    "w"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.批量梯度下降BGD\n",
+    "实际上是mini-BGD，也就是从n个样本X选取m个（m<n）进行计算\n",
+    "$$\n",
+    "w_{k+1} = w_{k} - \\alpha_k\\frac{1}{m}\\sum^n_{j\\in\\mathcal{I}_k}\\nabla_wf(w_k,x_i)\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# 生成200个随机样本\n",
+    "X = np.random.uniform(low=-5,high=5,size=200)\n",
+    "def mBGD(w0, X, m, iterationNum):\n",
+    "    w = w0\n",
+    "    for k in range(iterationNum):\n",
+    "        gradMean = 0\n",
+    "        # 从样本X中选取m个作为训练数据\n",
+    "        for j in range(m):\n",
+    "            x = np.random.choice(X)\n",
+    "            grad = w - x\n",
+    "            gradMean += grad\n",
+    "        gradMean = gradMean / m\n",
+    "        alpha = 1 / (k + 1)\n",
+    "        w = w - gradMean * alpha\n",
+    "    return w"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.018379214212067594"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = mBGD(3,X,20, 1000)\n",
     "w"
    ],
    "metadata": {
